--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "05702afe",
    "metadata": {},
    "outputs": [
@@ -190,15 +190,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Quantidade de idVotacao com mais de 250 votos: 1599\n"
+      "Salvo 1599 idVotacao em 'idVotacao_acima_250.txt'\n",
+      "Salvo 227 idVotacao em 'idVotacao_abaixo_ou_igual_250.txt'\n"
      ]
     }
    ],
    "source": [
-    "# Conta quantos têm mais de 250\n",
-    "maiores_250 = sum(1 for count in contagens.values() if count > 250)\n",
-    "print(f\"\\nQuantidade de idVotacao com mais de 250 votos: {maiores_250}\")"
+    "# Listas separadas\n",
+    "acima_250 = [id_v for id_v, count in contagens.items() if count > 250]\n",
+    "abaixo_ou_igual_250 = [id_v for id_v, count in contagens.items() if count <= 250]\n",
+    "\n",
+    "# Escreve em arquivos TXT\n",
+    "with open(\"idVotacao_acima_250.txt\", \"w\") as f:\n",
+    "    for id_v in acima_250:\n",
+    "        f.write(f\"{id_v}\\n\")\n",
+    "\n",
+    "with open(\"idVotacao_abaixo_ou_igual_250.txt\", \"w\") as f:\n",
+    "    for id_v in abaixo_ou_igual_250:\n",
+    "        f.write(f\"{id_v}\\n\")\n",
+    "\n",
+    "print(f\"Salvo {len(acima_250)} idVotacao em 'idVotacao_acima_250.txt'\")\n",
+    "print(f\"Salvo {len(abaixo_ou_igual_250)} idVotacao em 'idVotacao_abaixo_ou_igual_250.txt'\")\n"
    ]
   },
   {
